--- a/boards.html
+++ b/boards.html
@@ -7,6 +7,8 @@
 
 <head>
     <title>CSC102 Boards Page</title>
+    <!-- add a link to our css file-->
+    <link rel="stylesheet" href="main.css">
 </head>
 <!-- THE BODY SECTION HOLD THE TEXT AND IMAGES THAT WE WANT TO SHOW TO THE USER-->
  <body>
