--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <head>
     <title>CSC102 Home Page</title>
+    <!-- add a link to our css file-->
+    <link rel="stylesheet" href="main.css">
 </head>
 <!-- THE BODY SECTION HOLD THE TEXT AND IMAGES THAT WE WANT TO SHOW TO THE USER-->
  <body>
@@ -14,6 +16,13 @@
 <!-- p is paragraph tag; has spacing around it by default -->
 <p>
     <img id="birdImage" src="bird.jpg">
+    <p>
+        Click the button below to play a game. 
 </p>
- </body>
+<!-- link to game html-->
+<a href="game.html">
+    <!-- Creating a button for the game and styling it-->
+<button style="font-size: 25px; border-radius: 25px;">Start Game</button>
+</a>
+</body>
    </html>
