--- a/strings.html
+++ b/strings.html
@@ -36,7 +36,7 @@
             <form class="login_form" action="home.html" method="post" name="form" onsubmit="return validated()">
                 <div class="font">User Name</div>
                 <input autocomplete="off" type="text" name="user"
-                placeholder="Only alphabets" pattern="[a-z&A-Z]{8,20}"
+                placeholder="Only alphabets" pattern="[a-zA-Z]{8,20}"
                 title="Only alphabets, minimum length:8, maximum length:20" /><br>
                 <!--Br are spaces in the Html file-->
                 <br>
