--- a/event.html
+++ b/event.html
@@ -94,6 +94,23 @@
 <!-- THis is a wave file it the web browser can not play the first one-->
     <source src="Gemini - The Soundlings.wav" type="audio/wav"> 
 </audio>
+<br>
+<br>
+<!-- Youtube -->
+<p> Jingle Bells</p>
+<!-- Other sounds added to see if it plays-->
+<audio controls>
+    <source src="Jingle Bells - The Soundlings.mp3">
+</audio>
+<br>
+<br>
+<!-- free sound download-->
+<p>Astral-Creepy</p>
+<audio controls>
+    <source src="astral-creepy-dark-logo-254198.mp3">
+</audio>
+<!-- Sounds play in Debug, resubmitting -->
+
 
 <!--Adding another Meme Image -->
 <p>
