--- a/Home.html
+++ b/Home.html
@@ -5,10 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome page</title>
 </head>
+<link rel="stylesheet" href="main.css">
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html"> Home</a></li>
+            <li><a href="boards.html"> Education</a></li>
+            <li>
+                <a href="#">Class Projects ▾</a>
+                <ul class="dropdown">
+                    <li><a href="event.html">HTML Audio</a></li>
+                    <li><a href="event2.html">Floating Image</a></li>
+                    <li><a href="game.html">Game in HTML</a></li>
+                    <li><a href="strings.html">Palindrome/Login Checker</a></li>
+        </ul>
+        <li><a href="https://jamesartstudio.weebly.com/">My Portfolio</a></li>
+    </nav>
     <h1> Welcome, You have Successfully Login :)</h1>
     <p>
+        <br>
+        <br>
         <img id="painImage" src="pain.jpg">
-        <p>
+        <p> 
+<br><br><br><br><br><br><br><br><br>
+            <footer style="background-color: #19ac39;">
+                <hr>
+                Author: Christerfer James<br>
+                &copy; copyright reserved<br>
+                <small><A href="https://jamesartstudio.weebly.com/contact.html">Click to contact me</a></small>
+            </footer>
 </body>
 </html>
