--- a/boards.html
+++ b/boards.html
@@ -12,8 +12,28 @@
 </head>
 <!-- THE BODY SECTION HOLD THE TEXT AND IMAGES THAT WE WANT TO SHOW TO THE USER-->
  <body>
-<h1> Welcome to my Boards Page for CSC102</h1>
+  <header style="background-color: #19ac39;">
+    <h1>Welcome to my Boards Page for CSC102 </h1>
+</header>
+  <nav>
+    <ul>
+        <li><a href="index.html"> Home</a></li>
+        <li><a href="boards.html"> Education</a></li>
+        <li>
+            <a href="#">Class Projects ▾</a>
+            <ul class="dropdown">
+                <li><a href="event.html">HTML Audio</a></li>
+                <li><a href="event2.html">Floating Image</a></li>
+                <li><a href="game.html">Game in HTML</a></li>
+                <li><a href="strings.html">Palindrome/Login Checker</a></li>
+    </ul>
+    <li><a href="https://jamesartstudio.weebly.com/">My Portfolio</a></li>
+</nav>
+<br>
+<br>
+<h1> Game Art and Animation Tartget Tasks</h1>
 <!-- p is paragraph tag; has spacing around it by default -->
+ <br>
 <p>
 1. Demonstrate and communicate aesthetic skills and choices based on traditional art theory, 
 current game development practices and next-generation research. 
@@ -39,6 +59,40 @@ projects working within a production pipeline and the confines of a project’s 
 working with other disciplines to deliver highly polished and completed projects. 
 <br>
 <br>
+<br>
+<br>
 </p>
+<p>
+  <br>
+  Description:
+  
+  This HTML page outlines the requirements for graduating as a Game Art and Animation student at UAT.
+  The purpose of this assignment is to demonstrate how to format text and headers within an HTML page. 
+  For additional information about UAT and its curriculum, please use the link below to visit the UAT website.
+  <br>
+<br>
+<br>
+  Cliking this button will direct you to a diffent webpage
+</p>
+<br>
+<div class="myDiv">
+<button type="button" onclick="location.href='https://www.uat.edu/'"> 
+  To UAT Webpage</button>
+</div>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<footer style="background-color: #19ac39;">
+  <hr>
+  Author: Christerfer James<br>
+  &copy; copyright reserved<br>
+  <small><A href="https://jamesartstudio.weebly.com/contact.html">Click to contact me</a></small>
+</footer>
  </body>
    </html>
