--- a/event.html
+++ b/event.html
@@ -6,9 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--HTML Tabp name-->
     <title>Moving and Audio page</title>
-<head>
+
+
+<body>
+    <Header style="background-color: #19ac39;">
     <!-- Title of the page-->
-    <h1> The Moving PePe</h1>
+    <h1> Audio in HTML</h1>
+    </Header>
+    <nav>
+        <ul>
+            <li><a href="index.html"> Home</a></li>
+            <li><a href="boards.html"> Education</a></li>
+            <li>
+                <a href="#">Class Projects ▾</a>
+                <ul class="dropdown">
+                    <li><a href="event.html">HTML Audio</a></li>
+                    <li><a href="event2.html">Floating Image</a></li>
+                    <li><a href="game.html">Game in HTML</a></li>
+                    <li><a href="strings.html">Palindrome/Login Checker</a></li>
+        </ul>
+        <li><a href="https://jamesartstudio.weebly.com/">My Portfolio</a></li>
+    </nav>
+
+</body>
+
+<head>
+    <br>
+    <!-- Title of the page-->
+    <h1> Click on the Audio to play sounds</h1>
     <!-- Link to style sheet that I will be using for this assignemnt-->
     <link rel="stylesheet" href="Moving.css">
 </head>
@@ -84,9 +109,24 @@
 
 
 
-<br><br><br><br>
+<br>
+<br>
+
+
+<P1>
+   **Description:** For this assignment, we needed to add audio and a moving image to the HTML page. The audio files are on the right,
+    and you can play them using the play button depending on your web browser.
+   
+   At the bottom, I included scrolling text that turned out well, but I still plan to increase the font size and add a background image 
+   for it. This is still a work in progress. Below is a link to free sounds if you are interested.
+   
+</P1>
+<br>
+<br>
+<br>
 <!--Christerfer James  Assingment 4.2 adding audio-->
     <body>
+        
         <!-- adding the audio, file form Youtube Audio Library-->
          <P>Gemini - The Soundlings</P>
          <!-- Added controls to the sound file-->
@@ -113,19 +153,40 @@
 </audio>
 <!-- Sounds play in Debug, resubmitting -->
 
-
 <!--Adding another Meme Image -->
 <p>
     <img id="smoothImage" src="Smooth.jpg">
     <p>
+<!--Lint to webpage-->
+<a href="https://pixabay.com/sound-effects/">
+
+    <!-- making font bigger-->
+     <style>
+        marquee{
+            font-size: 30px;
+        }
+     </style>
+
+<!-- creating a button to the web sound page-->
+    <div class="myDiv">
+    <button style="font-size: 25px; border-radius: 25px;">Enjoy the Tunes</button>
+    </div>
+<br>
 <!-- Trying to add scrolling text (test)-->
         <div class="scrolling-text-container">
-            <span> By Christerfer James</span>
             <!-- Text that is scrolling across the page-->
-            <marquee behavior="" direction="left"> Thank you for viewing my page! </marquee>
+            <marquee behavior="" direction="left"> Thank you for viewing my page, I hope you enjoyed the music and sounds! </marquee>
 
         </div>
-<style>
 
-</style>
+
+<footer style="background-color: #19ac39;">
+    <hr>
+    Author: Christerfer James<br>
+    &copy; copyright reserved<br>
+    <small><A href="https://jamesartstudio.weebly.com/contact.html">Click to contact me</a></small>
+  </footer>
+
+  
     </body>
+</html> 
