--- a/game.html
+++ b/game.html
@@ -8,7 +8,28 @@
     <!-- add a link to my game style css file-->
     <link rel="stylesheet" href="style.css">
     </head>
+
 <body>
+    <header style="background-color: #19ac39;">
+        <h1> Game in HTML </h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html"> Home</a></li>
+            <li><a href="boards.html"> Education</a></li>
+            <li>
+                <a href="#">Class Projects ▾</a>
+                <ul class="dropdown">
+                    <li><a href="event.html">HTML Audio</a></li>
+                    <li><a href="event2.html">Floating Image</a></li>
+                    <li><a href="game.html">Game in HTML</a></li>
+                    <li><a href="strings.html">Palindrome/Login Checker</a></li>
+        </ul>
+        <li><a href="https://jamesartstudio.weebly.com/">My Portfolio</a></li>
+    </nav>
+    <br>
+
     <!-- Text above the game -->
     <h1> Click to Jump the Block!! </h1>
     <!-- adding a div to create my game-->
@@ -17,13 +38,34 @@
         <div id="character"></div>
         <div id="block"></div>
     </div>
+    <br>
+    <br>
+<p>
+    **Description:** For this assignment, we need to create a game using HTML. The game starts automatically as soon as you click on the page, 
+    so be prepared to click the button to make the block jump. While clicking the button to jump is simple, you'll need to time your jumps carefully 
+    to avoid getting hit by the incoming blocks. Enjoy playing the game, and have fun!
+</p>
+<br><br>
     <p>
         <img id="jumping" src="jumping.jpg">
     </p>
+    <br>
+    <br>
     <!-- link to game html-->
-<a href="index.html">
-    <!-- Creating a button for the game and styling it-->
-<button style="font-size: 25px; border-radius: 25px; background-color: greenyellow; color: black;">Back to Home</button>
+<!--<a href="index.html">
+    < Creating a button for the game and styling it-->
+<button style="font-size: 25px; border-radius: 25px; background-color: greenyellow; color: black;"></button>
+<br>
+<br>
+<br>
+<br>
+<!---Adding Footer-->
+<footer style="background-color: #19ac39;">
+    <hr>
+    Author: Christerfer James<br>
+    &copy; copyright reserved<br>
+    <small><A href="https://jamesartstudio.weebly.com/contact.html">Click to contact me</a></small>
+</footer>
 </body>
 <!-- add a link to my JAVA Script file-->
 <script src="script.js"></script>
