--- a/boards.html
+++ b/boards.html
@@ -81,9 +81,29 @@ working with other disciplines to deliver highly polished and completed projects
 </div>
 <br><br>
 <br><br>
-<br><br>
-<br><br>
-<br><br>
+ <!-- Creating a table -->
+<h2> My Class/Homework Hours</h2>
+<br>
+<table bgcolor="black" width="1400" align="center">
+  <tr bgcolor="dark red">
+    <th width="100"> Sunday</th>
+    <th width="100"> Monday</th>
+    <th width="100"> Tuseday</th>
+    <th width="100"> Wednesday</th>
+    <th width="100"> Thursday</th>
+    <th width="100"> Friday</th>
+    <th width="100"> Saturday</th>
+  </tr>
+  <tr bgcolor="gray" align="center">
+    <td>Homework: 6am - 9pm CST</td>
+    <td>Live Session: 6-7 CST</td>
+    <td>Homework: 5pm - 10pm CST</td>
+    <td>Live Session 6-7 CST</td>
+    <td>Homework: 5pm - 10pm CST</td>
+    <td>Homework: 5pm - 11pm CST</td>
+    <td>Homework: 6am - 11pm CST</td>
+  </tr>
+</table>
 <br><br>
 <br><br>
 <br><br>
